2025-06-03
    rdpg-to-c.awk 2.2.2
    enum parser produces better error messages

2025-05-30
    rdpg-to-c.awk 2.2.1
    minor token lookup improvement
    negative enum tests added

    to-c, to-awk tests refactored

    rdpg-to-c.awk 2.2.0
    -vTokHack tests fixed
    -vTokEnum implemented

    to-awk small test fixes

2025-05-26
    rdpg-comp.awk 2.2.0
    -vSync=<sync-spec> implemented

2025-02-19
	rdpg-to-c.awk 2.1.1
	set search now looped
	err_crit() removed

	rdpg-comp.awk 2.1.3
	does not perform conflict checks again if Sync is off

2025-02-18
	rdpg-comp.awk 2.1.2
	bugfix: Sync != default does not break the conflict checks

2025-01-19
	rdpg-to-c.awk 2.1.0
	-vTokHack=1 implemented

2025-01-17
	rdpg-to-awk.awk 2.1.1
	help msg fix

2025-01-13
	rdpg-to-awk.awk 2.1.0
	-vTokHack=1 implemented

	rdpg-comp.awk 2.1.1
	bugfix - "error" not considered a 'prev' token anymore

	rdpg-comp.awk 2.1.0
	-v Imm=<1|0> added with end to end tests

2025-01-12
	rdpg-to-awk.awk 2.0.2 - _rdpg_tok_next() does not call tok_curr() anymore

2025-01-02
	rdpg-comp.awk 2.0.2 - lex-awk.awk 1.7.3 integrated

2024-12-15
	structs 1.2 integrated
	make sures fixed
	rdpg-comp.awk   2.0.1
	rdpg-to-c.awk   2.0.1
	rdpg-to-awk.awk 2.0.1

2024-12-11
	Rewrite done.
	rdpg-comp.awk   2.0
	rdpg-to-c.awk   2.0
	rdpg-to-awk.awk 2.0

2024-06-24
	_rdpg_ir.awk 2.0
	sets, match_n, err_n added

2024-06-06
	rdpg.awk 1.5
	bug fix - check_reachability_rule() works with more than two productions
	bug fix - check_left_rec_rule() cats only the start rule at the end rather
	than the ptr val of the current rule
	other - minor refactorings

2023-01-17
	rdpg.awk 1.312 -> 1.4
	spaces at EOL bug  bug fixed

2022-01-18
	rdpg.awk 1.311 -> 1.312
	updated to awklib_prefix_tree.awk 1.3

2022-01-14
	rdpg.awk 1.31 -> 1.311
	updated to awklib_prefix_tree.awk 1.2

2021-10-30
	rdpg.awk v1.3  -> v1.31
	spaces after defn bug fixed

2021-10-16
	rdpg.awk        v1.2  -> v1.3
	rdpg-opt.awk    v1.1  -> v1.2