@@ -7,14 +7,18 @@ TARGET := ../parts/$(LEXER)
 .PHONY: help
 help:
 	@echo 'make target - lexer + sure + place in parent dir'
+	@echo 'make build  - lexer'
 	@echo 'make lexer  - compile the lexer'
-	@echo 'make sure   - test + check'
+	@echo 'make sure   - test + make sure all tests run'
 	@echo 'make test   - run tests'
-	@echo 'make testv  - verbose tests'
+	@echo 'make testv  - run verbose tests'
 	@echo 'make help   - this screen'
 
 .PHONY: target
-target: $(TARGET)
+target: build $(TARGET)
+
+.PHONY: build
+build: lexer
 
 # <tests>
 TEST_DIR   := ./tests
@@ -31,7 +35,7 @@ $(TARGET): $(LEXER)
 lexer: $(LEXER)
 
 $(LEXER): parts/$(LEXER) ../../../common/_rdpg_ir.awk
-	(echo "# <lexer>"; cat $^; echo "# </lexer>") > $@
+	(echo "# <lexer>" && cat $^ && echo "# </lexer>") > $@
 
 .PHONY: test
 test:
