@@ -6,15 +6,21 @@ TARGET := ../parts/$(PRS)
 
 .PHONY: help
 help:
-	@echo 'make target - prs + test + place to parent dir'
+	@echo 'make target - build + test + place to parent dir'
+	@echo 'make build  - prs'
 	@echo 'make prs    - compile the parser front end'
 	@echo 'make test   - run tests'
 	@echo 'make help   - this screen'
 
 .PHONY: target
-target: $(TARGET)
+target: build $(TARGET)
 
+.PHONY: build
+build: prs
+
+# <tests>
 RUN_TESTS := $(AWK) -f $(PRS)
+# </tests>
 $(TARGET): $(PRS)
 	$(RUN_TESTS) && cp -v $(PRS) $(TARGET)
 
@@ -23,7 +29,7 @@ prs: $(PRS)
 
 PRS_GEN := parts/_prs_gen.awk
 $(PRS): $(PRS_GEN) parts/_prs_usr.awk
-	(echo "# <prs>"; cat $^; echo "# </prs>") > $@
+	(echo "# <prs>" && cat $^ && echo "# </prs>") > $@
 
 RDPG_DIR := ../../../..
 RDPG_COMP := $(AWK) -f $(RDPG_DIR)/rdpg-comp.awk
