@@ -6,15 +6,19 @@ TARGET := ../parts/$(LEXER)
 
 .PHONY: help
 help:
-	@echo 'make target - lexer + sure + place in parent dir'
+	@echo 'make target - build + sure + place in parent dir'
+	@echo 'make build  - lexer'
 	@echo 'make lexer  - compile the lexer'
-	@echo 'make sure   - test + check'
+	@echo 'make sure   - make sure all tests run'
 	@echo 'make test   - run tests'
-	@echo 'make testv  - verbose tests'
+	@echo 'make testv  - run tests verbosely'
 	@echo 'make help   - this screen'
 
 .PHONY: target
-target: $(TARGET)
+target: build $(TARGET)
+
+.PHONY: build
+build: lexer
 
 # <tests>
 TEST_DIR   := ./tests
@@ -32,7 +36,7 @@ lexer: $(LEXER)
 
 LEX_GEN := parts/_lex_gen.awk
 $(LEXER): $(LEX_GEN) parts/_lex_usr.awk
-	(echo "# <lexer>"; cat $^; echo "# </lexer>") > $@
+	(echo "# <lexer>" && cat $^ && echo "# </lexer>") > $@
 
 LB_DIR := ../../../../../lex-build
 LB_FIRST := $(AWK) -f $(LB_DIR)/lex-first.awk
